--- a/package.json
+++ b/package.json
@@ -4,23 +4,35 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "socket": "node server/socket-server.js",
+    "dev:all": "echo Run 'npm run socket' in one terminal and 'npm run dev' in another",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.74.0",
+    "@google/generative-ai": "^0.24.1",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-tooltip": "^1.2.8",
     "clsx": "^2.1.0",
+    "cors": "^2.8.6",
+    "dbffile": "^1.12.0",
+    "exceljs": "^4.4.0",
+    "express": "^5.2.1",
     "jspdf": "^4.1.0",
     "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.330.0",
     "next": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^15.0.0",
     "react-joyride": "^2.9.3",
     "recharts": "^2.12.0",
-    "tailwind-merge": "^2.2.1"
+    "socket.io": "^4.8.3",
+    "socket.io-client": "^4.8.3",
+    "tailwind-merge": "^2.2.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/jspdf": "^1.3.3",
