--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dbffile": "^1.12.0",
     "exceljs": "^4.4.0",
     "express": "^5.2.1",
+    "firebase": "^12.9.0",
     "jspdf": "^4.1.0",
     "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.330.0",
